alignment fix

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1640,7 +1640,6 @@ button.filled {
 #pricingPage {
   #intro {
     height: 400px;
-    text-align: left;
     background-color: $pink;
     background-image: url('../images/headers/pricing.JPG');
     position: relative;
